Fix bugs with overflowing screen, equals sign, divide by 0

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@
     border-radius: 20px;
     margin-bottom: 15px;
     text-align: right;
-    padding: 70px 20px 0 100px;
+    padding: 70px 20px 0 20px;
 }
 
 #zero {
